fix: wrap flex container

--- a/js_machine_front/src/styles/about.css
+++ b/js_machine_front/src/styles/about.css
@@ -40,7 +40,7 @@
 
 .container_flex-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     position: fixed;
 }
 
